<resources>
    <string name="descriptionLogo">Logo</string>
    <string name="titre">La Taverne Oubliee</string>
    <string name="username">USERNAME</string>
    <string name="password">PASSWORD</string>
    <string name="co">CONNEXION</string>
    <string name="app_name">Taverne Oubliee</string>
    <string name="dice">dice</string>
    <string name="table">table</string>
    <string name="bienvenue">Bienvenue</string>
    <string name="all">Toutes les tables</string>
    <string name="userOnly">Mes tables</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="alltable">Toutes les tables ici</string>
    <string name="testusertable">Mes Tables Ici</string>
    <string-array name="arraytest">
        <item>ok</item>
        <item>t'as</item>
        <item>reussi</item>
    </string-array>
</resources>
